--- a/src/main/resources/assets/dragonhelper/lang/en_us.json
+++ b/src/main/resources/assets/dragonhelper/lang/en_us.json
@@ -25,5 +25,6 @@
   "text.autoconfig.dragonhelper.option.ui.rngMeterTracker": "Shows your current RNG meter experience",
   "text.autoconfig.dragonhelper.option.ui.zombieSlayerLevelTracker": "Shows your current zombie slayer level progress",
 
+  "dragonhelper.category": "DragonHelper",
   "key.dragonhelper.configScreen": "Edit the UI layout for DragonHelper!"
 }
