All command-based functionality depends on being logged into dragnet, added a reset button to the UI, fixed bound issues when moving elements around in the UI TODO: fix stutter movement when moving grouped elements

--- a/src/main/resources/assets/dragonhelper/lang/en_us.json
+++ b/src/main/resources/assets/dragonhelper/lang/en_us.json
@@ -26,6 +26,8 @@
   "text.autoconfig.dragonhelper.option.ui.rngMeterTracker": "Shows your current RNG meter experience",
   "text.autoconfig.dragonhelper.option.ui.zombieSlayerLevelTracker": "Shows your current zombie slayer level progress",
 
+  "text.config.dragonhelper.resetbutton": "Reset UI",
+
   "category.dragonhelper": "DragonHelper",
   "key.dragonhelper.configScreen": "Edit the UI layout for DragonHelper!"
 }
