Added per-server config

--- a/src/main/resources/assets/dragonhelper/lang/en_us.json
+++ b/src/main/resources/assets/dragonhelper/lang/en_us.json
@@ -1,30 +1,30 @@
 {
-  "text.autoconfig.dragonhelper.title": "DragonHelper Config",
-  "text.autoconfig.dragonhelper.option.messages": "Messages",
-  "text.autoconfig.dragonhelper.option.messages.@Tooltip": "Dragnet message modification settings",
-  "text.autoconfig.dragonhelper.option.messages.hideOtherPlayerDrops": "Hides the dragon item drop messages for other players",
-  "text.autoconfig.dragonhelper.option.messages.hideSummoningEyePlace": "Hides the summoning eye placement messages",
-  "text.autoconfig.dragonhelper.option.messages.hideLootnumText": "Hides the loot number and magic find text",
-  "text.autoconfig.dragonhelper.option.messages.hidePvpProtectionText": "Hides the 'Hey! Sorry, but you can't PvP here.' message",
-  "text.autoconfig.dragonhelper.option.autosell": "Auto-Sell",
-  "text.autoconfig.dragonhelper.option.autosell.@Tooltip": "Dragnet auto-sell settings",
-  "text.autoconfig.dragonhelper.option.autosell.normalAutoSell": "Automatically runs the /sell command during the auto-sell",
-  "text.autoconfig.dragonhelper.option.autosell.specialAutoSell": "Automatically runs the /specialsell command during the auto-sell",
-  "text.autoconfig.dragonhelper.option.autosell.autoSellEyes": "Automatically sells summoning eyes during the auto-sell",
-  "text.autoconfig.dragonhelper.option.autosell.autoSellInterval": "Frequency, in seconds, to run the auto-sell commands",
-  "text.autoconfig.dragonhelper.option.notifications": "Notifications",
-  "text.autoconfig.dragonhelper.option.notifications.@Tooltip": "Dragnet notification settings",
-  "text.autoconfig.dragonhelper.option.notifications.notifyForSuperior": "Notifies you with a large title text when a superior dragon spawns",
-  "text.autoconfig.dragonhelper.option.notifications.notifyForInfernal": "Notifies you with a large title text when an infernal dragon spawns",
-  "text.autoconfig.dragonhelper.option.notifications.notifyForEndstoneProtector": "Notifies you with a large title text when the endstone protector spawns",
-  "text.autoconfig.dragonhelper.option.ui": "UI Layout",
-  "text.autoconfig.dragonhelper.option.ui.@Tooltip": "Dragnet UI settings",
-  "text.autoconfig.dragonhelper.option.ui.zealotKillCounter": "Shows a Zealot kill counter on your screen",
-  "text.autoconfig.dragonhelper.option.ui.dragonKillCounter": "Shows a dragon kill counter on your screen",
-  "text.autoconfig.dragonhelper.option.ui.endstoneProtectorKillCounter": "Shows an endstone protector kill counter on your screen",
-  "text.autoconfig.dragonhelper.option.ui.endstoneProtectorTimer": "Shows the time (in seconds) until the next endstone protector spawn",
-  "text.autoconfig.dragonhelper.option.ui.rngMeterTracker": "Shows your current RNG meter experience",
-  "text.autoconfig.dragonhelper.option.ui.zombieSlayerLevelTracker": "Shows your current zombie slayer level progress",
+  "text.config.dragonhelper.title": "DragonHelper Config",
+  "text.config.dragonhelper.category.messages": "Messages",
+  "text.config.dragonhelper.category.messages.tooltip": "DragonHelper message modification settings",
+  "text.config.dragonhelper.option.messages.hideOtherPlayerDrops": "Hides the dragon item drop messages for other players",
+  "text.config.dragonhelper.option.messages.hideSummoningEyePlace": "Hides the summoning eye placement messages",
+  "text.config.dragonhelper.option.messages.hideLootnumText": "Hides the loot number and magic find text",
+  "text.config.dragonhelper.option.messages.hidePvpProtectionText": "Hides the 'Hey! Sorry, but you can't PvP here.' message",
+  "text.config.dragonhelper.category.autosell": "Auto-Sell",
+  "text.config.dragonhelper.category.autosell.tooltip": "DragonHelper auto-sell settings",
+  "text.config.dragonhelper.option.autosell.normalAutoSell": "Automatically runs the /sell command during the auto-sell",
+  "text.config.dragonhelper.option.autosell.specialAutoSell": "Automatically runs the /specialsell command during the auto-sell",
+  "text.config.dragonhelper.option.autosell.autoSellEyes": "Automatically sells summoning eyes during the auto-sell",
+  "text.config.dragonhelper.option.autosell.autoSellInterval": "Frequency, in seconds, to run the auto-sell commands",
+  "text.config.dragonhelper.category.notifications": "Notifications",
+  "text.config.dragonhelper.category.notifications.tooltip": "DragonHelper notification settings",
+  "text.config.dragonhelper.option.notifications.notifyForSuperior": "Notifies you with a large title text when a superior dragon spawns",
+  "text.config.dragonhelper.option.notifications.notifyForInfernal": "Notifies you with a large title text when an infernal dragon spawns",
+  "text.config.dragonhelper.option.notifications.notifyForEndstoneProtector": "Notifies you with a large title text when the endstone protector spawns",
+  "text.config.dragonhelper.category.ui": "UI Layout",
+  "text.config.dragonhelper.category.ui.tooltip": "DragonHelper UI settings",
+  "text.config.dragonhelper.option.ui.zealotKillCounter": "Shows a Zealot kill counter on your screen",
+  "text.config.dragonhelper.option.ui.dragonKillCounter": "Shows a dragon kill counter on your screen",
+  "text.config.dragonhelper.option.ui.endstoneProtectorKillCounter": "Shows an endstone protector kill counter on your screen",
+  "text.config.dragonhelper.option.ui.endstoneProtectorTimer": "Shows the time (in seconds) until the next endstone protector spawn",
+  "text.config.dragonhelper.option.ui.rngMeterTracker": "Shows your current RNG meter experience",
+  "text.config.dragonhelper.option.ui.zombieSlayerLevelTracker": "Shows your current zombie slayer level progress",
 
   "text.config.dragonhelper.resetbutton": "Reset UI",
 
